--- a/index.css
+++ b/index.css
@@ -116,3 +116,17 @@ body {
 .login .inputBx input::placeholder {
     color: rgba(255, 255, 255, 0.75);
 }
+
+.login .links {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.login .links a {
+    color: #fff;
+    text-decoration: none;
+}
